AH-2004-11-03-0: Bugfix:    qsub doesn't forward the AFS token, removed 
                            set_sec_cred call 
                            Reschedule unknown blocked host for all jobs of the
                            rescheduled job.
                 Review:    AA, SG
                 Changed:   scheduler, qsub
                 Issue:     1301

CR-2004-11-03-0: Enhancm.:  - commlib debug client support can be enabled via 
                              compile time definition "ENABLE_DEBUG_CLIENT" for 
                              execd and qmaster daemons. 
                              The binary "test_debug_client" can be used as
                              debug client.
                 Changed:   commlib, gdilib
                 Review:    AA

AD-2004-11-03-0: Bugfix:    '-m a' qsub option did leave a zombie process
                 Review:    EB
                 Changed:   qmaster
                 Issue:     1277
                 Bugtraq:   5104789
                 
CR-2004-11-02-1: Bugfix:    - fixed build

CR-2004-11-02-0: Enhancm.:  - added new commlib test binary: test_debug_client
                            - added new parameter to statistic calculate function
                              to force calculation for qping requests. Otherwise
                              update statistics only once per minute
                            - added debug client support into commlib
                            - fixed bug when shutdown commlib with connected
                              stream clients
                            - fixed possible deadlock in commlib string list when
                              the malloc() of an entry failed.
                            - outcommented unused function: 
                              should_flush_event_client()
                 Changed:   commlib, gdilib, qmaster
                 Review:    AA

SG-2004-11-02-0: Bugfix:    - fixed a memory leak in the scheduler configuration